# pybind_examples

./: .gitignore  README.md
0-first_step/: CMakeLists.txt  pyproject.toml  setup.py  test_notebook.ipynb
0-first_step/src/: example.cpp
1-submodules/: CMakeLists.txt  test_nb.ipynb
1-submodules/src/: CMakeLists.txt
1-submodules/src/pytestlib/: pyMathRegister.cpp  pyMcRegister.cpp  pyRegister.hpp  pytestlib.cpp
1-submodules/src/testlib/math/: arithmetics.cpp  arithmetics.hpp
1-submodules/src/testlib/mc/: randpoint.cpp  randpoint.hpp
2-numpy/: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  vcpkg.json
2-numpy/src/: CMakeLists.txt
2-numpy/src/bindings/: bindings.cpp
2-numpy/src/cpp/: arithmetics.cpp
2-numpy/src/pytestlib/: pyutils.cpp
2-numpy/src/testlib/: exception.hpp  vecfunc.hpp
2-numpy_old/src/pytestlib/: pyutils.cpp  pyutils.hpp
2-numpy_old/src/testlib/: matrix.hpp  vecfunc.cpp
